--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -13,13 +13,15 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "firebase": "^11.1.0",
     "heroicons": "^2.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
-    "react-tabs": "^6.1.0"
+    "react-tabs": "^6.1.0",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
